@@ -67,6 +67,26 @@
             <bugs>
                  <bug id="1420" tool="jira">
                      <description>
+		                Fixed problem with NPE in SAXAny (related to the use of namespaces).
+                    </description>
+                    <contributor>
+                        <name>Jason Mihalick</name>
+                        <email>jason@jCraftsmen.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Jason Mihalick</name>
+                        <email>jason@jCraftsmen.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20060525</date>
+                </bug>                
+                 <bug id="1420" tool="jira">
+                     <description>
 		                Added support for unmarshalling attributes of type byte[].
                     </description>
                     <contributor>
